network/vpc.tf
resource "aws_vpc" "aws_arab_vpc" {
  cidr_block = var.vpc_cidr_block
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = var.env_tag
  }
}
